# recommendation-system

./: .gitignore  LICENSE  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.dvc/tmp/: lock
src/: config.py  prepare.py
